# sumologic_mcp

./: .dockerignore  .env.dev  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  cursor-setup.md  pyproject.toml  requirements-dev.txt  requirements.txt
deploy/: README.md  docker-compose.dev.yml  docker-compose.yml
deploy/kubernetes/: configmap.yaml  deployment.yaml  secret.yaml  service.yaml
deploy/nginx/: nginx.conf
deploy/scripts/: deploy.sh  k8s-deploy.sh
deploy/systemd/: install.sh  sumologic-mcp.service
docs/: configuration-migration.md  configuration.md  cursor-setup-guide.md  development.md  performance-tuning.md
examples/: README.md  claude-desktop-config.json  config-development.json  config-minimal.json  docker-compose.yml  mcp-client-config.json
examples/mcp-client-configs/: claude-desktop.json  docker-client.json  uvx-client.json
examples/systemd/: sumologic-mcp.service
sumologic_mcp/: __init__.py  __main__.py  api_client.py  api_discovery.py  api_validator.py  auth.py  config.py  config_validator.py  discovery_logging.py  error_handler.py  main.py  monitoring.py  resilience.py  server.py  time_utils.py
sumologic_mcp/exceptions/: __init__.py
sumologic_mcp/models/: __init__.py  config.py  monitor.py  responses.py
sumologic_mcp/tools/: __init__.py  collector_tools.py  dashboard_tools.py  metrics_tools.py  monitor_error_handler.py  monitor_tools.py  search_tools.py
tests/: __init__.py
